Login and sign in page

--- a/client/app/landing/landing.html
+++ b/client/app/landing/landing.html
@@ -41,7 +41,7 @@
       <img src="./assets/images/icons/icon-search.png" alt="Off-campus housing" style="width: 98px; height: 69px;">
       <h2>Off-campus housing</h2>
       <p>Search available rooms. Look for roommates </p>
-    </div><!-- /.col-lg-4 -->
+    </div>
 
     <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
       <img src="./assets/images/icons/icon-community.png" alt="Community" style="width: 74px; height: 69px;">
