--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -1,92 +1,50 @@
-<div ng-include="'components/layout/navbar/navbar.html'"></div>
+<div class="main">
+  <div ng-include="'components/layout/navbar/navbar.html'"></div>
+  <section class="login-box">
+    <h2 class="heading">Sign up</h2>
 
-<div class="container">
-  <div class="row">
-    <div class="col-sm-12">
-      <h1>Sign up</h1>
-    </div>
-    <div class="col-sm-12">
-      <!-- novalidate is used to disable browser's native form validation -->
-      <!-- name attribute must be set so form instance is published into the scope of the signup controller -->
-      <form class="form" name="form" ng-submit="signup.register(form)" novalidate>
+    <form class="main-form" name="form" ng-submit="signup.register(form)" novalidate>
 
-        <div class="form-group" ng-class="{'has-success': form.firstname.$valid && signup.submitted, 'has-error': form.firstname.$invalid && signup.submitted}">
-            <label for="firstname">First Name</label>
-            <input id="firstname" type="text" name="firstname" class="form-control" ng-model="signup.user.firstname" placeholder="First name" required/>
-            <p class="help-block" ng-show="form.firstname.$error.required && signup.submitted">A first name is required</p>
-        </div>
+      <label class="lbl">
+        <input type="text" ng-model="signup.user.firstname" placeholder="First name" ng-class="{'has-success': form.firstname.$valid && signup.submitted, 'has-error': form.firstname.$invalid && signup.submitted}" required/>
+        <p class="help-block" ng-show="form.firstname.$error.required && signup.submitted">A first name is required</p>
+      </label>
 
-        <!--<div class="form-group" ng-class="{'has-success': form.middlename.$valid && signup.submitted, 'has-error': form.middlename.$invalid && signup.submitted}">-->
-            <!--<label for="middlename">Middle Name</label>-->
-            <!--<input id="middlename" type="text" name="middlename" class="form-control" ng-model="signup.user.middlename" required/>-->
-            <!--<p class="help-block" ng-show="form.middlename.$error.required && signup.submitted">A middle name is required</p>-->
-        <!--</div>-->
+      <label class="lbl">
+        <input type="text" ng-model="signup.user.lastname" placeholder="Last name" ng-class="{'has-success': form.lastname.$valid && signup.submitted, 'has-error': form.lastname.$invalid && signup.submitted}" required/>
+        <p class="help-block" ng-show="form.lastname.$error.required && signup.submitted">A last name is required</p>
+      </label>
 
-        <div class="form-group" ng-class="{'has-success': form.lastname.$valid && signup.submitted, 'has-error': form.lastname.$invalid && signup.submitted}">
-            <label for="lastname">Last Name</label>
-            <input id="lastname" type="text" name="lastname" class="form-control" ng-model="signup.user.lastname" placeholder="Last name" required/>
-            <p class="help-block" ng-show="form.lastname.$error.required && signup.submitted">A last name is required</p>
-        </div>
+      <label class="lbl">
+        <input type="text" ng-model="signup.user.phone" ui-mask="999-999-9999" ng-class="{'has-success': form.phone.$valid && signup.submitted, 'has-error': form.phone.$invalid && signup.submitted}" required/>
+        <p class="help-block" ng-show="form.username.$error.required && signup.submitted">A phone number is required</p>
+      </label>
 
-        <!--<div class="form-group" ng-class="{'has-success': form.username.$valid && signup.submitted, 'has-error': form.username.$invalid && signup.submitted}">-->
-            <!--<label for="username">Username</label>-->
-            <!--<input id="username" type="text" name="username" class="form-control" ng-model="signup.user.username" placeholder="Username" required/>-->
-            <!--<p class="help-block" ng-show="form.username.$error.required && signup.submitted">A username is required</p>-->
-        <!--</div>-->
+      <label class="lbl" ng-class="{ 'has-success': form.email.$valid && signup.submitted, 'has-error': form.email.$invalid && signup.submitted }">
+        <input type="email" ng-model="signup.user.email"  placeholder="Your email" required>
+        <p class="help-block" ng-show="form.email.$error.email && signup.submitted">Doesn't look like a valid email.</p>
+        <p class="help-block" ng-show="form.email.$error.required && signup.submitted">What's your email address?</p>
+        <p class="help-block" ng-show="!form.email.$error.email && !form.email.$error.required && form.email.$invalid && signup.submitted">Your email have to finish with .edu</p>
+        <p class="help-block" ng-show="form.email.$error.mongoose" >{{ signup.errors.email }}</p>
+      </label>
 
-        <div class="form-group" ng-class="{'has-success': form.phone.$valid && signup.submitted, 'has-error': form.phone.$invalid && signup.submitted}">
-            <label for="phone">Phone number</label>
-            <input id="phone" type="text" name="phone" class="form-control" ng-model="signup.user.phone" ui-mask="999-999-9999" required/>
-          <p class="help-block" ng-show="form.username.$error.required && signup.submitted">A phone number is required</p>
-         </div>
+      <label class="lbl" ng-class="{ 'has-success': form.password.$valid && signup.submitted, 'has-error': form.password.$invalid && signup.submitted }">
+        <input type="password" ng-model="signup.user.password" ng-minlength="3" placeholder="Minimum 3 characters required" required>
+      </label>
 
-        <div class="form-group" ng-class="{ 'has-success': form.email.$valid && signup.submitted, 'has-error': form.email.$invalid && signup.submitted }">
-            <label for="email">Email</label>
-          <!--ng-pattern="/\.edu$/"-->
-            <input id="email" type="email" name="email" class="form-control" ng-model="signup.user.email"  placeholder="Your email" required mongoose-error/>
-            <p class="help-block" ng-show="form.email.$error.email && signup.submitted">Doesn't look like a valid email.</p>
-            <p class="help-block" ng-show="form.email.$error.required && signup.submitted">What's your email address?</p>
-            <p class="help-block" ng-show="!form.email.$error.email && !form.email.$error.required && form.email.$invalid && signup.submitted">Your email have to finish with .edu</p>
-            <p class="help-block" ng-show="form.email.$error.mongoose" >{{ signup.errors.email }}</p>
-        </div>
-
-        <div class="form-group" ng-class="{ 'has-success': form.password.$valid && signup.submitted, 'has-error': form.password.$invalid && signup.submitted }">
-            <label for="password">Password</label>
-            <input id="password" type="password" name="password" class="form-control" ng-model="signup.user.password" ng-minlength="3" placeholder="Minimum 3 characters required" required mongoose-error/>
-        </div>
-
-        <div class="form-group" ng-class="{ 'has-success': form.password.$valid && signup.submitted, 'has-error': form.password.$invalid && signup.submitted }">
-          <label for="confirmPassword">Confirm</label>
-          <input id="confirmPassword" type="password" name="confirmPassword" class="form-control" ng-model="signup.user.confirmPassword" match="signup.user.password" placeholder="Repeat password" ng-minlength="3" required mongoose-error/>
+      <label class="lbl" ng-class="{ 'has-success': form.password.$valid && signup.submitted, 'has-error': form.password.$invalid && signup.submitted }">
+        <input type="password" ng-model="signup.user.confirmPassword" match="signup.user.password" placeholder="Repeat password" ng-minlength="3" required>
         <p class="help-block" ng-show="form.password.$error.required && signup.submitted">Please provide valid password</p>
         <p class="help-block" ng-show="form.password.$error && signup.submitted && !form.password.$error.required">Password's dont match</p>
-        </div>
+      </label>
 
-        <!--<p class="help-block" ng-show="(form.password.$error.minlength || form.password.$error.required) && signup.submitted">Password must be at least 3 characters.</p>-->
-        <p class="help-block" ng-show="form.password.$error.mongoose">{{ signup.errors.password }}</p>
+      <p class="help-block" ng-show="form.password.$error.mongoose">{{ signup.errors.password }}</p>
 
-        <div>
-          <button class="btn btn-inverse btn-lg btn-register" type="submit">Sign up</button>
-          <a class="btn btn-default btn-lg btn-login" ui-sref="login">Login</a>
-        </div>
-<pre>{{signup.user |json}}</pre>
-        <hr>
-        <div>
-          <a class="btn btn-facebook" href="" ng-click="signup.loginOauth('facebook')"><i class="fa fa-facebook"></i> Connect with Facebook</a>
-          <a class="btn btn-google-plus" href="" ng-click="signup.loginOauth('google')"><i class="fa fa-google-plus"></i> Connect with Google+</a>
+      <div class="options">
+        <input type="submit" value="Sign me up!" class="lrg-btn submit">
+        <span>Already have an account? <a href="#" class="link" ui-sref="login">Sign in</a></span>
+      </div>
 
-          <!--TODO<a class="btn btn-linkedin" href="" ng-click="signup.loginOauth('linkedin')"><i class="fa fa-linkedin"></i> Connect with Linkedin</a>-->
-          <!--TODO<a class="btn btn-twitter" href="" ng-click="signup.loginOauth('twitter')"><i class="fa fa-twitter"></i> Connect with Twitter</a>-->
-
-        </div>
-
-      </form>
-      <hr/>
-
-    </div>
-  </div>
-  <hr>
+    </form>
+  </section>
 </div>
-
-
-
