remove useless href from links using ui-sref in login and signup

--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -21,7 +21,7 @@
 
       <div class="options">
         <input type="submit" value="Sign me in!" class="lrg-btn submit">
-        <span>Don't have an account? <a href="#" class="link" ui-sref="signup">Sign up</a></span>
+        <span>Don't have an account? <a class="link" ui-sref="signup">Sign up</a></span>
       </div>
 
     </form>
