--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -42,7 +42,7 @@
 
       <div class="options">
         <input type="submit" value="Sign me up!" class="lrg-btn submit">
-        <span>Already have an account? <a href="#" class="link" ui-sref="login">Sign in</a></span>
+        <span>Already have an account? <a class="link" ui-sref="login">Sign in</a></span>
       </div>
 
     </form>
