--- a/client/index.html
+++ b/client/index.html
@@ -165,6 +165,7 @@
           <script src="app/dashboard/my-profile/my.profile.route.js"></script>
           <script src="app/dashboard/my-profile/step1/step1.controller.js"></script>
           <script src="app/dashboard/my-profile/step1/step1.route.js"></script>
+          <script src="app/dashboard/my-profile/step2/step1.controller.js"></script>
           <script src="app/dashboard/my-profile/step2/step2.controller.js"></script>
           <script src="app/dashboard/my-profile/step2/step2.route.js"></script>
           <script src="app/dashboard/my-properties/add.new.property/add.new.property.controller.js"></script>
@@ -197,7 +198,6 @@
           <script src="components/layout/navbar/navbar.controller.js"></script>
           <script src="components/widgets/adress-autocomplete/adress-autocomplete.directive.js"></script>
           <script src="components/widgets/confirm-password/confirm.password.directive.js"></script>
-          <script src="components/widgets/fileselect/fileselect.js"></script>
           <script src="components/widgets/fileupload/fileupload.js"></script>
           <script src="components/widgets/fileupload/ngthumb.js"></script>
           <script src="components/widgets/modal/modal.service.js"></script>
