--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,7 @@
       <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
       <link rel="stylesheet" href="bower_components/angular-busy/dist/angular-busy.css" />
       <link rel="stylesheet" href="bower_components/toastr/toastr.css" />
+      <link rel="stylesheet" href="bower_components/angucomplete-alt/angucomplete-alt.css" />
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
@@ -81,6 +82,7 @@
       <script src="bower_components/toastr/toastr.js"></script>
       <script src="bower_components/angular-strap/dist/angular-strap.js"></script>
       <script src="bower_components/angular-strap/dist/angular-strap.tpl.js"></script>
+      <script src="bower_components/angucomplete-alt/angucomplete-alt.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
