--- a/client/index.html
+++ b/client/index.html
@@ -195,6 +195,7 @@
           <script src="components/core/data/occupation.js"></script>
           <script src="components/core/data/pet.js"></script>
           <script src="components/core/data/property.js"></script>
+          <script src="components/core/data/roommates.js"></script>
           <script src="components/core/data/vehicle.js"></script>
           <script src="components/layout/footer/footer.controller.js"></script>
           <script src="components/layout/navbar/navbar.controller.js"></script>
