Slider And three main boxes of dashboard

--- a/client/index.html
+++ b/client/index.html
@@ -25,6 +25,7 @@
       <link rel="stylesheet" href="bower_components/angular-busy/dist/angular-busy.css" />
       <link rel="stylesheet" href="bower_components/toastr/toastr.css" />
       <link rel="stylesheet" href="bower_components/angucomplete-alt/angucomplete-alt.css" />
+      <link rel="stylesheet" href="bower_components/slick-carousel/slick/slick.css" />
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
@@ -32,6 +33,7 @@
       <link rel="stylesheet" href="app/account/login/login.css">
       <link rel="stylesheet" href="app/admin/admin.css">
       <link rel="stylesheet" href="app/app.css">
+      <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="components/layout/navbar/navbar.css">
       <link rel="stylesheet" href="components/widgets/fileupload/fileupload.css">
       <link rel="stylesheet" href="components/widgets/modal/modal.css">
@@ -83,6 +85,8 @@
       <script src="bower_components/angular-strap/dist/angular-strap.js"></script>
       <script src="bower_components/angular-strap/dist/angular-strap.tpl.js"></script>
       <script src="bower_components/angucomplete-alt/angucomplete-alt.js"></script>
+      <script src="bower_components/slick-carousel/slick/slick.min.js"></script>
+      <script src="bower_components/angular-slick/dist/slick.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
