--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -1,17 +1,94 @@
 <div ng-include="'components/layout/navbar/navbar.html'"></div>
+<div ng-include="'components/layout/navbar/sub-navbar.html'"></div>
+<div class="dashboard-wrapper">    
+  <div ui-view="">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 my-profile">
+          <h2> You </h2>
+          <div class="white-box">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex molestiae quibusdam eius, odio assumenda, hic, eligendi animi voluptatibus velit voluptatum magnam sunt inventore earum! Odit est officia reprehenderit ea voluptates.</p>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9">
+          <h2> Available Rooms</h2>
+          <div class="white-box available-rooms">
+            <slick dots="true" class="slider row" slides-to-show="3" slides-to-scroll="3" responsive="dashboard.breakpoints.availableRooms">
 
-<div class="container">
-  <div class="col-md-12">
-    <tabset class="">
-      <tab ng-repeat="tab in dashboard.tabs" ui-sref="{{tab.sref}}" heading="{{tab.title}}"
-      active="tab.active" disabled="tab.disabled" select="setIndex($index)"></tab>
-    </tabset>
+              <!-- start room box -->
+              <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 room">
+                <div class="picture">
+                  <img src="../assets/fake/home.jpg" alt="">
+                </div>
+                <div class="info">
+                  <strong class="value">
+                    $700 mo.
+                  </strong>
+                  <span class="distance">
+                    <i class="fa fa-map-marker"></i> 1.3 mi
+                  </span>
+                </div>
+                <ul class="specs">
+                  <li><i class="fa fa-bed"></i> Single</li>
+                  <li><i class="fa fa-users"></i> 2 roomates</li>
+                  <li><i class="fa fa-bed"></i> Shared bathroom</li>
+                  <li><i class="fa fa-calendar"></i> March 1</li>
+                </ul>
+              </div>
+              <!-- end room box -->
+              
+
+            </slick>
+          </div>
+
+          <h2> Looking for a room</h2>
+          <div class="white-box looking-for-room">
+            <slick dots="true" class="slider row" slides-to-show="2" slides-to-scroll="2" responsive="dashboard.breakpoints.lookingRoom">
+
+              <!-- start room box -->
+              <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 room">
+                <div class="media">
+                  <div class="media-left">
+                    <a href="#">
+                      <img class="media-object profile-image img-circle" src="../../assets/fake/girl.jpg" >
+                    </a>
+                  </div>
+                  <div class="media-body">
+                    <h4 class="media-heading user-name">Kelley Andrews</h4>
+                    <p class="quote">Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo.</p>
+                  </div>
+                  <ul class="profile-info">
+                    <li>Max rent $560</li>
+                    <li>Female only</li>
+                    <li>15 mi radius</li>
+                  </ul>
+                </div>
+              </div>
+              <!-- end room box -->
 
 
-    <div ui-view="">
-      <br/>
-      <h1>dashboard view</h1>
+            </slick>
+          </div>
 
+          <h2> Around you</h2>
+          
+          <div class="white-box around-you">
+
+            <slick dots="true" class="slider row" slides-to-show="5" slides-to-scroll="5" responsive="dashboard.breakpoints.aroundYou">
+
+              <!-- start student box -->
+              <div class="col-xs-4 col-sm-4 col-md-2 col-lg-2 student">
+                <img src="../../assets/fake/boy.jpg" class="profile-image img-circle">
+                <h3>Andrew Jin</h3>
+                <em>Undergrad, UCL</em>
+              </div>
+              <!-- end student box -->
+
+            </slick>
+          </div>
+
+        </div>
+      </div>
     </div>
   </div>
 </div>
