--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -11,9 +11,10 @@
           </div>
         </div>
         <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9">
-          <h2> Available Rooms</h2>
+        <h2 class="section-title"> Available Rooms</h2>
           <div class="white-box available-rooms">
             <slick dots="true" class="slider row" slides-to-show="3" slides-to-scroll="3" responsive="dashboard.breakpoints.availableRooms"  init-onload="true" data="dashboard.availableRooms">
+
               <!-- start room box -->
               <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 room" ng-repeat="room in dashboard.availableRooms track by $index">
                 <div class="picture">
@@ -40,7 +41,7 @@
             </slick>
           </div>
 
-          <h2> Looking for a room</h2>
+          <h2 class="section-title"> Looking for a room</h2>
           <div class="white-box looking-for-room">
             <slick dots="true" class="slider row" slides-to-show="2" slides-to-scroll="2" responsive="dashboard.breakpoints.lookingRoom" init-onload="true" data="dashboard.lookingRoom">
 
@@ -69,7 +70,7 @@
             </slick>
           </div>
 
-          <h2> Around you</h2>
+          <h2 class="section-title"> Around you</h2>
           
           <div class="white-box around-you">
 
