schema changes in v2 and create PG schema v2 and new models dir

--- a/client/index.html
+++ b/client/index.html
@@ -194,6 +194,7 @@
           <script src="components/core/data/occupation.js"></script>
           <script src="components/core/data/pet.js"></script>
           <script src="components/core/data/property.js"></script>
+          <script src="components/core/data/roomListing.js"></script>
           <script src="components/core/data/roommates.js"></script>
           <script src="components/core/data/vehicle.js"></script>
           <script src="components/layout/footer/footer.controller.js"></script>
