--- a/client/index.html
+++ b/client/index.html
@@ -161,6 +161,8 @@
           <script src="app/dashboard/messages/messages.route.js"></script>
           <script src="app/dashboard/my-profile/add-address/new.address.ctrl.js"></script>
           <script src="app/dashboard/my-profile/add-address/new.address.route.js"></script>
+          <script src="app/dashboard/my-profile/add-pet/add.pet.controller.js"></script>
+          <script src="app/dashboard/my-profile/add-pet/add.pet.route.js"></script>
           <script src="app/dashboard/my-profile/edit-address/edit.address.controller.js"></script>
           <script src="app/dashboard/my-profile/edit-address/edit.address.route.js"></script>
           <script src="app/dashboard/my-profile/my.profile.controller.js"></script>
