--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -7,11 +7,53 @@
         <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 my-profile">
           <h2> You </h2>
           <div class="white-box">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex molestiae quibusdam eius, odio assumenda, hic, eligendi animi voluptatibus velit voluptatum magnam sunt inventore earum! Odit est officia reprehenderit ea voluptates.</p>
+            <h4>New messages</h4>
+            <hr>
+            <div class="messages">
+
+              <!-- start message box -->
+              <div class="message-box" ng-repeat="message in dashboard.messages">
+                <div class="media">
+                  <div class="media-left">
+                    <a href="#">
+                      <img class="media-object profile-image img-circle" ng-src="{{message.profile_picture}}">
+                    </a>
+                  </div>
+                  <div class="media-body">
+                    <h4 class="media-heading user-name">{{message.username}}</h4>
+                    <p class="message">{{message.message}}</p>
+                    <em class="elapsed-time"> <i class="fa fa-clock-o"></i> {{message.elapsed_time}} </em>
+                  </div>
+                </div>
+              </div>
+              <!-- end message box -->
+
+            </div>
+            <a href="#" class="btn btn-rented primary"> Views all messages </a>
+            <hr>
+            
+            <div class="profile">
+              <div class="set-size">
+                <div class="pie-wrapper progress-30">
+                  <span class="label"><img src="../assets/fake/girl.jpg" class="img-circle" alt=""></span>
+                  <div class="pie">
+                    <div class="left-side half-circle"></div>
+                    <div class="right-side half-circle"></div>
+                  </div>
+                  <div class="shadow"></div>
+                </div>
+              </div>
+              <h2> Jennifer Clardy 
+                <small> Your profile is 30% complete</small>
+              </h2>
+              <a href="#" class="btn btn-rented secondary"> Views all messages </a>
+            </div>
+
+
           </div>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
-        <h2 class="section-title"> Available Rooms</h2>
+          <h2 class="section-title"> Available Rooms</h2>
           <div class="white-box available-rooms">
             <slick dots="true" class="slider row" slides-to-show="3" slides-to-scroll="3" responsive="dashboard.breakpoints.availableRooms"  init-onload="true" data="dashboard.availableRooms">
 
