Fixes on navbar

--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -1,6 +1,6 @@
 <div class="main">
   <div ng-include="'components/layout/navbar/navbar.html'"></div>
-  <section class="login-box">
+  <section class="login-box white-box">
     <h2 class="heading">Sign up</h2>
 
     <form class="main-form" name="form" ng-submit="signup.register(form)" novalidate>
