--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -1,7 +1,7 @@
 <div class="main">
   <div ng-include="'components/layout/navbar/navbar.html'"></div>
-  <section class="login-box">
-    <h2 class="heading">Create your account with...</h2>
+  <section class="login-box white-box">
+    <h2 class="heading">Login with...</h2>
 
     <article class="social">
       <a class="link email"><span>Email</span></a>
