--- a/client/app/landing/landing.html
+++ b/client/app/landing/landing.html
@@ -1,52 +1,8 @@
 <div ng-include="'components/layout/navbar/navbar.html'"></div>
-<div class="jumbotron">
-  <div class="container text-center">
+<div ng-include="'app/landing/jumbotron.html'"></div>
+<div ng-include="'app/landing/valueicons.html'"></div>
+<div ng-include="'app/landing/corefeatures.html'"></div>
+<div ng-include="'app/landing/howitworks.html'"></div>
+<div ng-include="'app/landing/community.html'"></div>
+<div ng-include="'app/landing/joinrented.html'"></div>
 
-    <div class="row">
-      <div class="col-sm-12 heading">
-        <h1 class="lead-msg">Looking for an easy way to find the best off-campus housing?</h1>
-      </div>
-    </div>
-    
-    <div class="row">
-      <div class="col-sm-12">
-        <img class="img-responsive center-block" src="./assets/images/jumbotron/rented-HomepageGraph.png" />
-      </div>
-    </div>
-    
-    <div class="row">
-      <div class="col-sm-12">
-        <p><a class="btn btn-lg btn-rounded btn-rented-primary" href="#" role="button">Get Started Today</a></p>
-      </div>
-    </div>
-
-  </div>
-</div>
-
-
-<div class="container marketing">
-  <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
-      <h1 class="lead-msg primary">Why use rented?</h1>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-      <img src="./assets/images/icons/icon-circles.png" alt="Secure" style="width: 170px; height: 69px;">
-      <h2>A trusted network</h2>
-      <p> Student only network. Requires university email address </p>
-    </div>
-
-    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-      <img src="./assets/images/icons/icon-search.png" alt="Off-campus housing" style="width: 98px; height: 69px;">
-      <h2>Off-campus housing</h2>
-      <p>Search available rooms. Look for roommates </p>
-    </div>
-
-    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-      <img src="./assets/images/icons/icon-community.png" alt="Community" style="width: 74px; height: 69px;">
-      <h2>Ongoing community</h2>
-      <p> Connect with other students around you. Plan events or carpool together </p>
-    </div>
-  </div>
-</div>
