--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width">
     <meta name="fragment" content="!">
     <!-- We define the SEO variables we want to dynamically update -->
-    <title>Rented co | {{ seo.pageTitle }}</title>
+    <title>{{ seo.pageTitle }}</title>
     <meta name="description" content="{{ seo.pageDescription }}">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(client) app/vendor.css -->
@@ -56,7 +56,7 @@
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-XXXXX-X');
+      ga('create', 'UA-49864239-1');
       ga('send', 'pageview');
     </script>
 
