--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -8,19 +8,19 @@
           <h2> You </h2>
           
           <div class="white-box buttons-box">
-            <a href="#" class="btn btn-rented primary">Available rooms</a>
-            <a href="#" class="btn btn-rented secondary">Looking</a>
+            <a class="btn btn-rented primary" ui-sref="dashboard.myProperties.addNew">Post Available Property</a>
+            <a  class="btn btn-rented secondary">Post Looking</a>
           </div>
 
           <div class="white-box profile-sidebar">
             <div class="messages">
               <h4>New messages</h4>
-            <hr>
+              <hr>
               <!-- start message box -->
               <div class="message-box" ng-repeat="message in dashboard.messages">
                 <div class="media">
                   <div class="media-left">
-                    <a href="#">
+                    <a >
                       <img class="media-object profile-image img-circle" ng-src="{{message.profile_picture}}">
                     </a>
                   </div>
@@ -32,8 +32,8 @@
                 </div>
               </div>
             </div>
-              <!-- end message box -->
-            <a href="#" class="btn btn-rented primary"> Views all messages </a>
+            <!-- end message box -->
+            <a  class="btn btn-rented primary"> Views all messages </a>
             <hr>
             
             <div class="profile">
@@ -50,14 +50,14 @@
               <h2> Jennifer Clardy 
                 <small> Your profile is 30% complete</small>
               </h2>
-              <a href="#" class="btn btn-rented secondary"> Views all messages </a>
+              <a  class="btn btn-rented secondary" ui-sref="dashboard.myProfile"> Complete Profile </a>
             </div>
 
 
           </div>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
-          <h2 class="section-title"> Available Rooms</h2>
+          <h2 class="section-title"> Available Properties</h2>
           <div class="white-box available-rooms">
             <slick dots="true" class="slider row" slides-to-show="3" slides-to-scroll="3" responsive="dashboard.breakpoints.availableRooms"  init-onload="true" data="dashboard.availableRooms">
 
@@ -94,7 +94,7 @@
               <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 room" ng-repeat="person in dashboard.lookingRoom track by $index">
                 <div class="media">
                   <div class="media-left">
-                    <a href="#">
+                    <a >
                       <img class="media-object profile-image img-circle" ng-src="{{person.profile_picture}}" >
                     </a>
                   </div>
@@ -110,7 +110,7 @@
                 </div>
               </div>
               <!-- end room box -->
-            <hr>  
+              <hr>  
             </slick>
           </div>
 
@@ -127,7 +127,7 @@
                 <em>{{student.university}}</em>
               </div>
               <!-- end student box -->
-            <hr>
+              <hr>
             </slick>
           </div>
 
@@ -156,7 +156,7 @@
                     </div>
                     <div class="edit">
                       <span class='text'>Edit</span> 
-                      <a href="#" class="bubble">
+                      <a  class="bubble">
                         <i class="fa fa-pencil"></i>
                       </a>
                     </div>
