--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -33,7 +33,8 @@
       </label>
 
       <label class="lbl" ng-class="{ 'has-success': form.password.$valid && signup.submitted, 'has-error': form.password.$invalid && signup.submitted }">
-        <input type="password" ng-model="signup.user.confirmPassword" match="signup.user.password" placeholder="Repeat password" ng-minlength="3" required>
+        <input type="password" ng-model="signup.user.confirmPassword" match="signup.user.password" placeholder="Repeat password" ng-minlength="3" ui-validate=" '$value==signup.user.password' "
+               ui-validate-watch=" 'signup.user.password' " required>
         <p class="help-block" ng-show="form.password.$error.required && signup.submitted">Please provide valid password</p>
         <p class="help-block" ng-show="form.password.$error && signup.submitted && !form.password.$error.required">Password's dont match</p>
       </label>
