--- a/client/app/dashboard/my-profile/my.profile.html
+++ b/client/app/dashboard/my-profile/my.profile.html
@@ -43,6 +43,22 @@
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
         <h2> Roomates </h2>
         <div class="white-box roomates">
+          <div class="row invitation-box text-center">
+            
+            <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 add">
+              <a class="bubble"><i class="fa fa-plus"></i></a>
+              <span>Add</span>
+            </div>
+            
+            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 or">
+              <span> OR </span>
+            </div>
+            <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 invite">
+              <span>Invite</span>
+              <a class="bubble"><i class="fa fa-envelope"></i></a>
+            </div>
+          </div>
+
           <div class="roomate">
             <div class="picture">
               <img src="../assets/fake/boy.jpg" alt="" class="img-circle">
@@ -58,7 +74,7 @@
       </div>
 
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-      <h2> Pets & Vehicle </h2>
+        <h2> Pets & Vehicle </h2>
         <div class="white-box pets">
           <div class="pet">
             <div class="picture">
