--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -20,7 +20,7 @@
       </label>
 
       <div class="options">
-        <input type="submit" value="Sign me in!" class="lrg-btn submit" ui-sref=".signup">
+        <input type="submit" value="Sign me in!" class="lrg-btn submit">
         <span>Don't have an account? <a class="link" ui-sref="signup">Sign up</a></span>
       </div>
 
