adding ec2 PG instance configuration, bug fux 113 114

--- a/client/app/dashboard/my-profile/my.profile.html
+++ b/client/app/dashboard/my-profile/my.profile.html
@@ -9,7 +9,7 @@
           </div>
           <dl>
             <dt>Name</dt>
-            <dd>Joao Mateus Scarpa</dd>
+            <dd>{{myProfile.tempMe.firstname}} {{myProfile.tempMe.lastname}} </dd>
             <dt>School</dt>
             <dd>Caltech</dd>
             <dt>Year</dt>
@@ -44,12 +44,12 @@
         <h2> Roomates </h2>
         <div class="white-box roomates">
           <div class="row invitation-box text-center">
-            
+
             <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 add">
               <a class="bubble"><i class="fa fa-plus"></i></a>
               <span>Add</span>
             </div>
-            
+
             <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 or">
               <span> OR </span>
             </div>
