--- a/client/index.html
+++ b/client/index.html
@@ -186,6 +186,8 @@
           <script src="app/dashboard/my-properties/add.new.property/add.new.route.js"></script>
           <script src="app/dashboard/my-properties/my.properties.controller.js"></script>
           <script src="app/dashboard/my-properties/my.property.route.js"></script>
+          <script src="app/dashboard/my-properties/property.details/property.details.controller.js"></script>
+          <script src="app/dashboard/my-properties/property.details/property.details.route.js"></script>
           <script src="app/landing/landing.controller.js"></script>
           <script src="app/prerender.controller.js"></script>
           <script src="components/blocks/exception/exception-handler.js"></script>
