--- a/client/index.html
+++ b/client/index.html
@@ -165,12 +165,16 @@
           <script src="app/dashboard/messages/messages.route.js"></script>
           <script src="app/dashboard/my-profile/add-address/new.address.ctrl.js"></script>
           <script src="app/dashboard/my-profile/add-address/new.address.route.js"></script>
+          <script src="app/dashboard/my-profile/add-looking/new.looking.controller.js"></script>
+          <script src="app/dashboard/my-profile/add-looking/new.looking.route.js"></script>
           <script src="app/dashboard/my-profile/add-pet/add.pet.controller.js"></script>
           <script src="app/dashboard/my-profile/add-pet/add.pet.route.js"></script>
           <script src="app/dashboard/my-profile/add-vehicle/new.vehicle.controller.js"></script>
           <script src="app/dashboard/my-profile/add-vehicle/new.vehicle.route.js"></script>
           <script src="app/dashboard/my-profile/edit-address/edit.address.controller.js"></script>
           <script src="app/dashboard/my-profile/edit-address/edit.address.route.js"></script>
+          <script src="app/dashboard/my-profile/edit-looking/edit.looking.controller.js"></script>
+          <script src="app/dashboard/my-profile/edit-looking/edit.looking.route.js"></script>
           <script src="app/dashboard/my-profile/edit-pet/edit.pet.controller.js"></script>
           <script src="app/dashboard/my-profile/edit-pet/edit.pet.route.js"></script>
           <script src="app/dashboard/my-profile/edit-vehicle/edit.vehicle.controller.js"></script>
@@ -204,6 +208,7 @@
           <script src="components/core/data/education.js"></script>
           <script src="components/core/data/finance.js"></script>
           <script src="components/core/data/local.js"></script>
+          <script src="components/core/data/looking.js"></script>
           <script src="components/core/data/occupation.js"></script>
           <script src="components/core/data/pet.js"></script>
           <script src="components/core/data/property.js"></script>
